# unsuckjs.com

./: .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  app.py  captain-definition  config.py  justfile  libraries.toml  libraries_retriever.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  template_service.py
.github/workflows/: coolify.yml  deploy.yml
api/: github.py
content/: index.md
data/: libraries.json
site/: app.py  gunicorn.conf.py
site/api/: github.py
site/content/: _index.md
site/data/: css.json  js.json  libraries.json
site/static/css/: bulma.min.css  microtip.css  styles.css  unsuckjs.min.css
site/templates/: base.html  footer.html  index.html
site/templates/coltrane/: base.html
site/templates/unsuckcss/: index.html
site/templates/unsuckjs/: index.html
site/templatetags/: custom_tags.py
templates/: index.html
templates/coltrane/: base.html
templatetags/: custom_tags.py
