[project]
name = "site"
version = "0.1.0"
dependencies = [
    "coltrane[deploy, json5, compressor] == 0.35.4",
    "iso8601 < 3",
    "django-cache-memoize < 1",
    "python-benedict < 1",
    "httpx < 1",
    "gunicorn < 21",
    "hiredis < 3",
    "redis < 5"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
