[project]
name = "site"
version = "0.1.0"
dependencies = [
    "coltrane[angles, compressor, deploy, json5] >= 0.37.0",
    "iso8601 < 3",
    "django-cache-memoize < 1",
    "python-benedict < 1",
    "httpx < 1",
    "hiredis < 3",
    "redis < 5",
    "refreshcss >= 0.5.1",
    "emoji-data-python >= 1.6.0",
]
requires-python = ">=3.10"

[tool.uv.sources]
#coltrane = { path = "../coltrane", editable = true }
#refreshcss = { path = "../refreshcss", editable = true }

[tool.ruff]
src = ["coltrane"]
exclude = []
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["coltrane"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]

[tool.pytest.ini_options]
addopts = "--quiet --failed-first -p no:warnings"
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow",
]
pythonpath = [
  "site"
]
